Chapter 9 draft complete

--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -183,6 +183,7 @@ Geophysical surveys target variations in the subsurface, revealing how condition
 As powerful as geophysical methods are at remotely detecting earth properties, each method represents an inherently underconstrained problem. Complex mathematical routines can invert data collected by aerial survey (e.g., gravity, magnetics) or by surface acquisition techniques (resistivity, MT, seismic) to create 2D or 3D subsurface models. Still, unlike highly precise medical imaging technologies like Magnetic Resonance Imaging (MRI) that completely surround the target, geophysical techniques have a limited top-down view of the earth and must contend with noisy environments. Solutions to geophysical problems thus tend to be non-unique, and uncertainty increases with depth. Joint approaches to mathematical inversion for subsurface models address this ambiguity by constraining solutions to match the observations from multiple geophysical methods at once \citep{vozoff_joint_1975}. The complexity of a joint inverse problem applied to geothermal rapidly grows as more data sets are incorporated, particularly when the different data are sensitive to different earth properties \citep{moorkamp_framework_2011}. In addition, geothermal model results can meaningfully differ depending on the selected mathematical treatment used to generate solutions \citep{rosenkjaer_comparison_2015}. One alternative approach avoids the mathematical and computational demands by combining data semi-quantitatively, either by visually correlating individual model results or by cascading constraints from one geophysical model to the next to generate an integrated solution \citep{jousset_hengill_2011, lichoro_joint_2019}. Absent a tightly-coupled formulation of the relationship between all data inputs, the weighted influence of each geophysical data source must be chosen by the analyst, which can be a significant source of uncertainty. Integrating sparse or qualitative geologic data also becomes an issue.
 
 \subsubsection{Play Fairway Analysis}
+\label{ch2:pfa}
 
 Regional or play scale exploration methods adapted from oil \& gas companies include geospatial risk assessments known as \acrlong{pfa} (\acrshort{pfa}). Conceptually, PFA breaks risk down into the constituent elements of a successful hydrocarbon play: reservoir, source, and seal \citep{fraser_regional_2010,nash_adaptation_2015}, and sometimes structure or trap \citep{doust_exploration_2010}. Maps are generated for each element based on any available data, including literature reviews, point data like wells or field sampling, and modeling results. Taking the collective evidence (or lack thereof) as input, subject matter experts provide a perception of chance as a probability, and statistical approaches combine the different probability maps into a cumulative favorability map and calculations of yet-to-find resource volumes \citep{lottaroli_evaluating_2018}. The Geothermal Technologies Office recently supported a number of projects focused on applying PFA techniques to identify geothermal plays across the United States, including blind and EGS geothermal systems \citep{eeri_play_2014}. Each study developed its own methodology for defining the primary geothermal play risk factors, quantifying uncertainty, and generating a final favorability map \citep{faulds_discovering_2019, jordan_low_2016, nash_phase_2017, wannamaker_structurally_2016}. Final numerical favorability scores were defined by a combination of risk elements, most often heat and permeability, with weights determined from data confidence and/or expert option \citep{garchar_geothermal_2016}.
 
