--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,36 @@
 
+@misc{hallett_open_2010,
+	title = {Open {Energy} {Info} ({OpenEI})},
+	url = {https://www.nrel.gov/docs/fy11osti/48798.pdf},
+	abstract = {The Open Energy Information (OpenEI.org) initiative is a free, open-source, knowledge-sharing platform. OpenEI
+was created to provide access to data, models, tools, and information that accelerate the transition to clean energy
+systems through informed decisions.},
+	urldate = {2021-07-25},
+	publisher = {NREL},
+	author = {Hallett, K.C.},
+	year = {2010},
+	note = {openei.org},
+}
+
+@inproceedings{moore_utah_2019,
+	address = {Stanford, California},
+	title = {The {Utah} {Frontier} {Observatory} for {Research} in {Geothermal} {Energy} ({FORGE}): {An} {International} {Laboratory} for {Enhanced} {Geothermal} {System} {Technology} {Development}},
+	url = {https://pangea.stanford.edu/ERE/pdf/IGAstandard/SGW/2019/Moore.pdf},
+	booktitle = {{PROCEEDINGS}, 44th {Workshop} on {Geothermal} {Reservoir} {Engineering}},
+	publisher = {Stanford University},
+	author = {Moore, Joseph and McLennan, John and Allis, Rick and Pankow, Kristine and Simmons, Stuart and Podgorney, Robert and Wannamaker, Philip and Bartley, John and Jones, Clay and Rickard, William},
+	month = feb,
+	year = {2019},
+}
+
+@mastersthesis{wilson_machine_2020,
+	address = {Cambridge, Mass.},
+	title = {Machine {Learning} for {Well} {Rate} {Estimation}: {Integrated} {Imputation} and {Stacked} {Ensemble} {Modeling}},
+	school = {Massachusetts Institute of Technology},
+	author = {Wilson, Oliver},
+	year = {2020},
+}
+
 @mastersthesis{palma_dynamic_2014,
 	address = {Cambridge, Mass.},
 	title = {Dynamic capabilities in related diversification: the case of geothermal technology development by oil companies},
