wrote acknowledgments, edited abstract and chapter 1

--- a/templates/chap7.tex
+++ b/templates/chap7.tex
@@ -119,7 +119,7 @@ The risk scorecard methodology plots risks before and after mitigation on a $5\t
 \begin{figure}%[htp]
 \centering
 \includegraphics[width=\linewidth]{templates/images/Figure-Risk_Matrix.png}
-\caption[Risk matrix]{Risk matrix for categorizing and prioritizing project risks (dark gray) and charting risk mitigation strategies (white). Marker size corresponds with risk value (likelihood $\times$ consequence). Markers are spread out within each cell for visualization purposes. Risk labels match those in Table \ref{tab:risk_log}.}
+\caption[Geothermal project risk matrix]{Risk matrix for categorizing and prioritizing project risks (dark gray) and charting risk mitigation strategies (white). Marker size corresponds with risk value (likelihood $\times$ consequence). Markers are spread out within each cell for visualization purposes. Risk labels match those in Table \ref{tab:risk_log}.}
 \label{fig:risk_matrix}
 \end{figure}
 
