--- a/templates/cover.tex
+++ b/templates/cover.tex
@@ -80,12 +80,12 @@
 % If there is more than one supervisor, use the \supervisor command
 % once for each.
 \supervisor{Aim\'e Fournier}{Research Scientist, Earth and Planetary Sciences}
-\supervisor{Bryan R. Moser}{Academic Director, System Design and Management}
+\supervisor{Bryan R. Moser}{Academic Director, System Design \& Management Program}
 
 % This is the department committee chairman, not the thesis committee
 % chairman.  You should replace this with your Department's Committee
 % Chairman.
-\chairman{Joan Rubin}{Executive Director, System Design and Management}
+\chairman{Joan Rubin}{Executive Director, System Design \& Management Program}
 
 % Make the titlepage based on the above information.  If you need
 % something special and can't use the standard form, you can specify
@@ -130,19 +130,23 @@
 
 \section*{Acknowledgments}
 
-The past year will be long remembered for the impact a global pandemic had on society at large. This thesis is a product of that time. Those mentioned below played a significant role in keeping things on track in spite of the many months of mask wearing; hand sanitizing; regular virus testing; quarantining; remote classes, meetings, and connection-building; and eventual vaccination. Some I have even met in person, although not all. That is all part of the legacy of this most unusual and memorable year.
+The past year will be remembered for the impact a global pandemic had on society at large. This thesis is a product of that time. Those mentioned below played a significant role in keeping things on track in spite of the many months of mask-wearing, virus-testing, quarantining, remote classes and conversations, and eventual vaccination. Some I have even met in person, although not all. That is part of the legacy of this most unusual and memorable year.
 
-[Advisor]
+First and foremost, I want to thank my advisor, Aim\'e Fournier for his good humor, guidance, and willingness to advise under remote conditions. Aim\'e showed early interest in the thesis before a proposal was even drafted, and his perspective and ideas helped shape what it became. I greatly appreciate his time, input, and willingness to take a chance on a stranger with only one year to produce results.
 
-[SDM - Readers, important individuals]
+I wish to thank the System Design \& Management program for an intense and incredible educational experience. Remote learning is nothing new to the program, and it was obvious from the quality of instruction they provided. Special thanks to my thesis reader and instructor, Bryan Moser, whose passion for learning and teaching is contagious. Bryan once commented that ``research is a lifestyle,” which rang true in his lectures for the SDM foundations courses, his agent-based modeling course, his Global Teamwork Lab meetings, his IEEE World Forum session, and basically any other time I saw him in action. Thanks also to Joan Rubin for leading the program and supporting each of us throughout the year. On a personal level, Joan kept an open door to communication by email, by phone, and eventually a handful of in-person meetings in support of my thesis journey.
 
-[ERL - NST Group]
+A separate and heartfelt thank you goes to Elizabeth Baker for taking the giant leap from being my teaching assistant in a glass of eighty-some students to becoming a very dear friend. Our time spent both online and in-person together made the highs and lows of thesis writing so worth it.
 
-[Chevron - Company]
+Thanks also to the MIT Energy Initiative for welcoming me among your ranks. Thanks especially to Diane Rigos for the regular check-ins, kind offers of help, and a couple of in-person meals earlier this summer that helped bring the Chevron students together for brief but memorable moments in time.
 
-[Chevron cohorts]
+The Earth Resources Lab was one of my first connections to MIT thanks to their brief visit to Houston in early Spring 2020 (pre-Covid). Thanks go to Laurent Demanet, Director of ERL, for responding to my trial balloon emails and connecting me with both Aim\'e Fournier and Mike Fehler. Mike in turn connected me with Steve Brown, Bill Rodi, Sven Treitel, Connor Smith, and the rest of the Great Basin Machine Learning project team under Jim Faulds. I feel honored to have met and conversed with so many brilliant people whom I now consider friends. Perhaps unsurprisingly, our group conversations were a strong influence on the machine learning investigation in this thesis.
 
-[Family]
+I wish also to thank my company sponsor, Chevron, for taking a chance on me. I specifically want to thank those who believed in my potential and supported my year-long absence to pursue this degree: Sebastien Bombarde, John Moore, and Janet Yun for being my champions; Mason Edwards, Kenn Ehman, Kellen Gunderson, Ash Harris, Fabien Laugier, Rhonda Welch, and Khryste Wright for keeping up with me during the year away; Brendan Horton for being my Digital Scholar mentor, and so many others in the greater Chevron community. On the program side, special thanks go to Shana Bolen and Margery Connor for a year of conversations, encouragement, and a lot of behind-the-scenes efforts that I may not have been fully aware of but certainly appreciate very much.
+
+Being a graduate student at MIT would be daunting in a normal year, but with a pandemic raging and real-life connections to faculty, staff, and fellow students reduced to a laptop screen and webcam, I have the 15 other Chevron scholars to thank for making the year a truly positive and life-changing experience. I feel so honored to have met such a diverse and wonderful group, and I look forward to many years of friendship and collaboration to come: Robert Andrais, Louis Catalan, Gloria Bahl Chambi, Christian Dowell, Matthew Hernandez, Matthew Kieke, Hemant Kumar, Alessandro Lucioli, Elias Machado, Monthep Parimontonsakul, Allison Polly, Kelsey Prestidge, Bagdat Toleubay, John Ward, and Surge Yemets.
+
+Last but not least, thank you to my wonderful husband of nearly 8 years, Hans, for putting up with my absence for a full 12 months. You bravely held down the fort on your own, caring for two senior dachshunds and a puppy while balancing a full-time job, commitments to the community, extreme Texas heat, and even the winter storm blackouts that make a cameo in Chapter 1. I dedicate this thesis to you in honor of the impact it had on your life as well as my own.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % -*-latex-*-
