--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,18 @@
 
+@article{bremmer_long_2010,
+	chapter = {Life and Style},
+	title = {The {Long} {Shadow} of the {Visible} {Hand}},
+	issn = {0099-9660},
+	url = {https://www.wsj.com/articles/SB10001424052748704852004575258541875590852},
+	abstract = {State-owned companies control most of the world's oil reserves. Ian Bremmer on why the power of the state is back.},
+	language = {en-US},
+	urldate = {2021-07-26},
+	journal = {Wall Street Journal},
+	author = {Bremmer, Ian},
+	month = may,
+	year = {2010},
+}
+
 @misc{hallett_open_2010,
 	title = {Open {Energy} {Info} ({OpenEI})},
 	url = {https://www.nrel.gov/docs/fy11osti/48798.pdf},
