edits to Chapter 2 (halfway)

--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,38 @@
 
+@misc{daso_eden_2020,
+	title = {Eden {GeoPower}, {An} {MIT} {Green} {Tech} {Startup}, {Improves} {America}’s {Oil} {Production}},
+	url = {https://www.forbes.com/sites/frederickdaso/2020/01/07/eden-geopower-an-mit-green-tech-startup-improves-americas-oil-production/},
+	abstract = {Paris Smalls, 26, Ammar Alali, 29, recognized the potential for novel extraction techniques to recover oil and created Eden GeoPower as a solution.},
+	language = {en},
+	urldate = {2021-07-28},
+	journal = {Forbes},
+	author = {Daso, Frederick},
+	month = jan,
+	year = {2020},
+	note = {Section: Enterprise Tech},
+}
+
+@misc{irena_country_2021,
+	title = {Country {Rankings}},
+	url = {https://www.irena.org/Statistics/View-Data-by-Topic/Capacity-and-Generation/Country-Rankings},
+	abstract = {Country Rankings},
+	language = {en},
+	urldate = {2021-06-01},
+	journal = {/Statistics/View-Data-by-Topic/Capacity-and-Generation/Country-Rankings},
+	author = {{IRENA}},
+	month = may,
+	year = {2021},
+}
+
+@book{turcotte_geodynamics_2002,
+	edition = {2nd edition},
+	title = {Geodynamics},
+	isbn = {0-521-66624-4},
+	publisher = {Cambridge university press},
+	author = {Turcotte, Donald L and Schubert, Gerald},
+	year = {2002},
+}
+
 @article{bremmer_long_2010,
 	chapter = {Life and Style},
 	title = {The {Long} {Shadow} of the {Visible} {Hand}},
@@ -2444,18 +2478,6 @@ The conclusions presented at the end of this report are the results of a learnin
 	author = {Hamm, Susan G and Augustine, Chad R and Tasca, Coryne and Winick, Jeffrey},
 	year = {2019},
 	note = {Publisher: National Renewable Energy Lab.(NREL), Golden, CO (United States)},
-}
-
-@misc{irena_country_2021,
-	title = {Country {Rankings}},
-	url = {/Statistics/View-Data-by-Topic/Capacity-and-Generation/Country-Rankings},
-	abstract = {Country Rankings},
-	language = {en},
-	urldate = {2021-06-01},
-	journal = {/Statistics/View-Data-by-Topic/Capacity-and-Generation/Country-Rankings},
-	author = {{IRENA}},
-	month = may,
-	year = {2021},
 }
 
 @book{williams_review_2008,
