Revisions of Chapter 2 complete

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -4,7 +4,6 @@
 \newacronym{auc}{AUC}{Area Under the ROC Curve}
 \newacronym{bht}{BHT}{Bottom Hole Temperature}
 \newacronym{bnn}{BNN}{Bayesian Neural Network}
-\newacronym{br}{BR}{Basin and Range}
 \newacronym{cdf}{CDF}{Cumulative Distribution Function}
 \newacronym{cnn}{CNN}{Convolutional Neural Network}
 \newacronym{cp}{CP}{Colorado Plateau}
@@ -54,6 +53,7 @@
 \newacronym{rgr}{RGR}{Rio Grande Rift}
 \newacronym{roc}{ROC}{Receiver Operating Characteristic}
 \newacronym{rps}{RPS}{Renewable Portfolio Standard}
+\newacronym{sbr}{SBR}{Southern Basin and Range}
 \newacronym{shap}{SHAP}{Shapley Additive Explanation}
 \newacronym{sigt}{SiGT}{Silica Geothermometer Temperature}
 \newacronym{steo}{STEO}{Short Term Energy Outlook}
