--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,11 @@
 
+@misc{brown_personal_2021,
+	title = {personal communication},
+	author = {Brown, Stephen C},
+	year = {2021},
+	note = {Great Basin Machine Learning Project},
+}
+
 @misc{daso_eden_2020,
 	title = {Eden {GeoPower}, {An} {MIT} {Green} {Tech} {Startup}, {Improves} {America}’s {Oil} {Production}},
 	url = {https://www.forbes.com/sites/frederickdaso/2020/01/07/eden-geopower-an-mit-green-tech-startup-improves-americas-oil-production/},
