revisions in Chapter 3.  Current line: 186

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -16,6 +16,7 @@
 \newacronym{eia}{EIA}{United States Energy Information Administration}
 \newacronym{enpv}{ENPV}{Expected Value of NPV}
 \newacronym{fcn}{FCN}{Fully Connected Network}
+\newacronym{fds}{FDS}{Full Data Set}
 \newacronym{fn}{FN}{False Negative}
 \newacronym{fp}{FP}{False Positive}
 \newacronym{fpr}{FPR}{False Positive Rate}
@@ -63,4 +64,7 @@
 \newacronym{usgs}{USGS}{United States Geological Survey}
 \newacronym{vag}{VAG}{Value at Gain}
 \newacronym{var}{VAR}{Value at Risk}
+\newacronym{wds}{WDS}{Well Data Set}
+\newacronym{wds4}{WDS4}{Well Data Set plus 4}
+\newacronym{wds8}{WDS8}{Well Data Set plus 8}
 \newacronym{xgb}{XGB}{XGBoost}
