--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -284,7 +284,7 @@ On the other side of the spectrum is the Cost of Renewable Energy Spreadsheet To
 Several geothermal cost model options are widely-available and accessible from researchers and U.S.\ government sources. While they differ in target audience and capabilities, the models capture similar inputs and produce levelized cost estimates for electricity generation from hydrothermal and/or EGS reservoirs. Uncertainty is rarely accounted for in the models. Instead, the user parameterizes the resource and power generation scenario and typically receives a single cost estimate. Sensitivity testing or use of parameter ranges must be handled manually (except with SAM), and the models are incompatible with dynamic strategic decision-making over the lifetime of a field. The absence of these features defines an opportunity for a different modeling approach: one that accounts for uncertainty, allows for strategic flexibility, and has a familiar and customizable form as described in Chapter \ref{ch4:cm_prep}. 
 
 \section{Case Study: Southwestern New Mexico}\label{ch2:case_outline}
-The area of interest (AOI) for the geothermal exploration work in chapters \ref{ch3:expl_prep} and \ref{ch5:expl_ml} is a 37,600 square mile region of Southwestern New Mexico covered by nine counties: Cibola, Valencia, Catron, Socorro, Grant, Sierra, Luna, Dona Ana, and Hidalgo (Figure \ref{fig:phys-provinces}). This region marks the conjunction of four significant geologic provinces. The \acrlong{sbr} (\acrshort{sbr}) extends across the lower third of the AOI. To the east lies the \acrlong{rgr} (\acrshort{rgr}), traced today by the course of the Rio Grande river. The \acrlong{cp} (\acrshort{cp}) covers the north of the study area, and the central-west region is blanketed by the \acrlong{mdvf} (\acrshort{mdvf}).
+The area of interest (AOI) for the geothermal exploration work in chapters \ref{ch3:expl_ml_prep} and \ref{ch5:expl_ml} is a 37,600 square mile region of Southwestern New Mexico covered by nine counties: Cibola, Valencia, Catron, Socorro, Grant, Sierra, Luna, Dona Ana, and Hidalgo (Figure \ref{fig:phys-provinces}). This region marks the conjunction of four significant geologic provinces. The \acrlong{sbr} (\acrshort{sbr}) extends across the lower third of the AOI. To the east lies the \acrlong{rgr} (\acrshort{rgr}), traced today by the course of the Rio Grande river. The \acrlong{cp} (\acrshort{cp}) covers the north of the study area, and the central-west region is blanketed by the \acrlong{mdvf} (\acrshort{mdvf}).
 
 The following is an overview of each province, followed by an in-depth look of the only active commercial power plant in NM, Lightning Dock. Cost-modeling work in chapters \ref{ch4:cm_prep} and \ref{ch6:cm_results} reference Lightning Dock as the parent facility to a proposed EGS expansion project.
 
@@ -313,7 +313,7 @@ Present-day commercial geothermal activity in New Mexico is limited to a single 
 \begin{figure}%{R}{0.65\linewidth}
 \centering
 \includegraphics[width=.85\textwidth]{templates/images/Figure-Lightning_Dock_Location_composite.png}
-\caption[Lightning Dock location map]{Map location of the Lightning Dock power plant. Inset map shows the facility in relationship to the state of NM and study area of interest for Chapters \ref{ch3:expl_prep} and \ref{ch5:expl_ml} of this thesis. Map created using Google Earth.}
+\caption[Lightning Dock location map]{Map location of the Lightning Dock power plant. Inset map shows the facility in relationship to the state of NM and study area of interest for Chapters \ref{ch3:expl_ml_prep} and \ref{ch5:expl_ml} of this thesis. Map created using Google Earth.}
 \label{fig:lightning_dock_map}
 \end{figure}
 
@@ -336,6 +336,6 @@ Key insights from this chapter include:
     \item An opportunity exists to apply supervised and unsupervised machine learning methods to geothermal exploration. Existing approaches have under-explored the influence of uncertainties on model prediction and reliability.
     \item Geothermal power plant conversion types include high-temperature resource steam plants; moderate to high-temperature resource flash plants, and low to moderate-temperature resource binary cycle plants. 
     \item Existing geothermal economic models estimate costs for a specified resource and power plant scenario. An opportunity exists to combine management of variable uncertainties, dynamic decision-making, and deployment using an open and adaptable platform.
-    \item Southwestern New Mexico consists of four unique physiographic provinces that have been well-documented in the past. This is the chosen study area for testing geothermal exploration risk mitigation strategies in Chapters \ref{ch3:expl_prep} and \ref{ch5:expl_ml}.
+    \item Southwestern New Mexico consists of four unique physiographic provinces that have been well-documented in the past. This is the chosen study area for testing geothermal exploration risk mitigation strategies in Chapters \ref{ch3:expl_ml_prep} and \ref{ch5:expl_ml}.
     \item Lightning Dock, a USGS-designated KGRA and active hydrothermal power plant, lies within the Southwest New Mexico study area. This is the selected area for testing risk mitigation with cost models in Chapters \ref{ch4:cm_prep} and \ref{ch6:cm_results}.
 \end{enumerate}
